manifests/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: todo-ui-deployment
  spec: 
    replicas: 1
    selector: 
      matchExpressions: 
      - key: app
        operator: In
        values: 
        - todo-ui
    strategy: 
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
    template: 
      metadata: 
        labels: 
          app : todo-ui
      spec: 
        containers: 
        - image: yugyogeshpawar/micro-todo-latest:v2
          name: todo-ui-container
          ports: 
          - containerPort: 80
