manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoui-ingress
spec: 
  ingressClassName: nginx
  rules: 
  - host: todoui.subhojitgoswami.cloud
    http: 
      paths: 
      - backend: 
          service: 
            name: todo-ui
            port: 
              number: 80
        path: /
        pathType: Prefix
